# robotiq_2f_urcap_adapter

./: CMakeLists.txt  README.md  package.xml
.trunk/: trunk.yaml
examples/scripts/: gripper_action_client.py
launch/: robotiq_2f85_urcap_adapter+mock_launch.py  robotiq_2f85_urcap_adapter_launch.py
scripts/: robotiq_2f_adapter_node.py  robotiq_2f_mock_server.py
